<resources>
    <string name="app_name">CalculatorFeb03</string>

    <string name="calculation_introduction">type cal type!</string>

    <string name="result">0</string>
    <string name="button_c">C</string>
    <string name="button_plusMinus">+/-</string>
    <string name="button_percent">%</string>
    <string name="button_divide">/</string>

    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiply">x</string>

    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>

    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>

    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_equals">=</string>
</resources>
